# routis

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/cli/: README.md
apps/cli/src/: index.ts
apps/desktop/: README.md
configs/policies/: balanced.yaml  cheap.yaml  deep.yaml  default.yaml  extradeep.yaml  routing.yaml
crates/routis-context/: Cargo.toml
crates/routis-context/src/: lib.rs
crates/routis-core/: Cargo.toml
crates/routis-core/src/: lib.rs  trace.rs
crates/routis-policy/: Cargo.toml
crates/routis-policy/src/: lib.rs
docs/: decision-trace.md
examples/: decision_trace_example.jsonl
scripts/: finalize-linked-cli.mjs
src/: lib.rs  main.rs  paths.rs  private_fs.rs  route_plan.rs  session_store.rs  trace_cli.rs  trace_store.rs
src/tui/: app.rs  command.rs  config.rs  history.rs  mod.rs  render.rs  session.rs  state.rs  symbols.rs  theme.rs
src/tui/screens/: home.rs  mod.rs  session.rs  setup.rs
src/tui/widgets/: decision_trace_panel.rs  dividers.rs  input.rs  mascot.rs  metrics.rs  mod.rs  palette.rs  timeline.rs
tests/: cli_smoke.rs  router-foundation.test.ts  tui_contract.rs
tests/eval/: eval.rs  recognition_cases.json  routing_cases.json  trace_contract.rs  tui_trace_commands.rs
tests/eval/explain_tree_snapshots/: architecture_extradeep.txt  auth_deep.txt  docs_cheap.txt  mixed_release.txt  ru_ui_fix.txt
