[workspace]
members = [
  "crates/routis-core",
  "crates/routis-context",
  "crates/routis-policy"
]
resolver = "2"

[package]
name = "routis"
version = "0.4.1"
edition = "2021"
authors = ["Alen Issayev"]
description = "Policy-aware CLI for routing AI coding tasks."
license = "Apache-2.0"
repository = "https://github.com/alenisaw/routis"
readme = "README.md"
keywords = ["cli", "ai", "codex", "routing", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "routis"
path = "src/main.rs"

[[test]]
name = "eval"
path = "tests/eval/eval.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
getrandom = "0.4"
hmac = "0.13"
ratatui = "0.30"
routis-core = { version = "0.4.1", path = "crates/routis-core" }
routis-context = { version = "0.4.1", path = "crates/routis-context" }
routis-policy = { version = "0.4.1", path = "crates/routis-policy" }
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
