[package]
name = "routis-core"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Pure routing logic for Routis."
repository = "https://github.com/alenisaw/routis"
readme = "../../README.md"
keywords = ["cli", "ai", "codex", "routing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
