[package]
name = "routis-policy"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Execution policy loading and command planning for Routis."
repository = "https://github.com/alenisaw/routis"
readme = "../../README.md"
keywords = ["cli", "ai", "codex", "routing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
routis-core = { version = "0.3.0", path = "../routis-core" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
